# SparsePulmoNet

./: .gitignore  CITATION.cff  LICENSE  NOTICE  README.md  pyproject.toml  requirements.txt
scripts/: analyze_layerwise.py  evaluate_checkpoint.py  extract_radiomics.py  run_ablation_fusion_backbones.py  run_ablation_inputs.py  select_lasso_features.py  train_osic.py
src/sparsepulmonet/: __init__.py  config.py
src/sparsepulmonet/data/: osic.py  preprocessing.py
src/sparsepulmonet/models/: baseline_backbones.py  crate_backbone.py  fusion.py  ipf_model.py
src/sparsepulmonet/training/: engine.py  metrics.py
src/sparsepulmonet/utils/: layerwise.py  seed.py
tests/: test_forward.py
